--- a/popup.html
+++ b/popup.html
@@ -37,5 +37,7 @@
         <input type = "text" id = "bus"> &nbsp; &nbsp;
         <input type = "button" id = "btn" value = "검색">
         <div id = "result"></div>
+        <div id = "result_info"></div>
+        <input type = "button" id = "img" value = "스크린샷">
     </body>
 </html>
